--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+    Arial, "Lucida Grande", sans-serif;
+}
+.menu-spacer {
+  flex-grow: 1;
+}
+.header-icon {
+  padding: 5px;
+  /* margin-top: 5px; */
+  color: #fff;
+}
+.text-white{
+  color: #fff;
+}
